# excel-generator-project

./: .env.example  .gitignore  .roorules  ARCHITECTURE.md  boilerplate_backend_spec.md  pyproject.toml  run_hidden.vbs  spec_reverse.md  start_streamlit.bat  start_test.bat
.claude/: settings.local.json
.history-memo/: 2025-10-31.md
.playwright-cli/: page-2026-05-25T00-54-14-897Z.yml  page-2026-05-25T00-55-32-694Z.yml  page-2026-05-25T00-55-46-345Z.yml  page-2026-05-25T00-56-05-464Z.yml  page-2026-05-25T00-56-20-618Z.yml  page-2026-05-25T00-56-38-410Z.yml  page-2026-05-25T00-56-55-915Z.yml  page-2026-05-25T00-57-14-109Z.yml  page-2026-05-25T00-57-40-059Z.yml  page-2026-05-25T00-58-13-984Z.yml  page-2026-05-25T00-58-42-243Z.yml  page-2026-05-25T00-59-20-562Z.yml  page-2026-05-25T01-00-00-005Z.yml  page-2026-05-25T01-00-47-349Z.yml  page-2026-05-25T01-01-05-476Z.yml  page-2026-05-25T01-12-51-609Z.yml  page-2026-05-25T01-15-08-260Z.yml  page-2026-05-25T01-16-15-553Z.yml
app/: __init__.py  main.py
config/: config.yaml  global.yaml
docs/: Python-良率日报生成器-v2.xmind  V3良率及不良率By批次汇总报表.xlsx  V3良率及不良率By月周天汇总报表.xlsx  V3良率日报每日异常填报表.xlsx  html_element.html  spec.md  ~$日良率Gap分析模板.xlsx  日良率Gap分析模板.xlsx
downloads/: V3良率及不良率By月周天汇总报表_M678.xlsx
others/: YieldAgentDashboard.jsx  flow_CT.html  gannt_CT.html  gannt_CT_monitor.html  gannt_CT_report.html  gannt_RS.html
output/: V3屏体良率日报-output.xlsx  V3屏体良率日报-temp.xlsx
resources/: 2026年良率目标拆解-1017版V05 - 无公式版.xlsx  3月(N+4)良率预测 2026.3.12.xlsx  CT良率异常波动管理表.xlsx  V3屏体良率日报-A版.xlsx  V3良率及不良率By批次汇总报表.xlsx  V3良率及不良率By月周天汇总报表.xlsx  (+2 more)
(+114 files in other folders)
